# tablet_tracker

./: Cargo.toml  README.md  flake.nix
.cargo/: config.toml
assets/: config.ron
src/: debug.rs  lib.rs  main.rs  ui.rs
