[package]
name = "tablet_mouse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {git = "https://github.com/bevyengine/bevy"}
enigo = "0.0.14"
bevy-inspector-egui = "0.11.0"
image = "0.24.2"
winit = "0.26.1"
ron = "0.7.1"
serde = "1.0.138"